VoiceOver Firefox checkboxes not recognized by navigation keys
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
People
(Reporter: testertesting989, Assigned: morgan)
References
Details
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
Details |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36
Steps to reproduce:
MacOS 10.15.7 / 11.3
Firefox 89.0b8
https://capt-tds-uat.cambiumast.com/student
- Start VoiceOver
- Launch “VoiceOver Utility Application” in “/Applications/Utilities”
a.) Switch to commanders panel and select the Quick Nav Tab.
b.) Check "Enable Quick Nav" and "Enable single-key webpage navigation when using Quick Nav", if not currently checked
c.) Close "VoiceOver Utility" - Launch browser to https://capt-tds-uat.cambiumast.com/student
- Press “C” VoiceOver speaks “Checkbox not found” Expected result: focus moves to “Guest login” checkbox.
- Press “j” focus moves to and VoiceOver speaks “Guest User Toggle to sign in as yourself checked checkbox”.
- Press “c” and VoiceOver says “Last Checkbox” Expected result VoiceOver moves to guest session
Actual results:
VoiceOver Firefox checkboxes not recognized by navigation keys
Expected results:
Focus should move to the Firefox checkboxes with navigation keys
| Reporter | ||
Updated•5 years ago
|
| Reporter | ||
Comment 1•5 years ago
|
||
Please Note: expected behavior seen in VoiceOver with Safari. Also, Firefox on Windows with JAWS moves to these checkboxes with the "x" when in Virtual PC Cursor.
Comment 2•5 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Disability Access APIs' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Updated•5 years ago
|
Comment 3•5 years ago
|
||
I can confirm this issue (setting bug status to New) with today's Nightly. We do not seem to support this use case yet. Morgan, is this something we just don't support yet?
| Assignee | ||
Comment 4•4 years ago
|
||
Hi, thanks for flagging :) I think this is part of quick nav, which we don't support yet. I can look into how involved it'd be to implement though :)
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
| Assignee | ||
Comment 5•4 years ago
|
||
Updated•4 years ago
|
Comment 7•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Comment 8•4 years ago
|
||
Reproduced the issue on Firefox 90.0a1 (2021-05-07) under macOS 10.15.7 by following the info provided in Comment 0.
The issue is fixed on Firefox 90.0b4 and Firefox 91.0a1 (2021-06-07) on the same machine.
Description
•