Bug 1710742: Modify VO checkbox search key to work with quick nav r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D115430